# NLP_German_vs_Chinese_Cars

./: .gitignore  README.md  pyproject.toml
Car_Brands/: README.md
Car_Brands/data/: cars_reviews.json  cars_reviews.txt  cars_reviews_labeled.json  cars_reviews_ner_inline.txt
Car_Brands/models/: car_reviews_classifier.pkl  class_names.pkl  ner_names.pkl
Car_Brands/models/my_ner_model/: meta.json
Car_Brands/notebooks/: 01_Download_Data.ipynb  02_NER_Train_Model.ipynb  03_Classification.ipynb  04_Test_New_Data.ipynb
configs/: brands.yaml  ner_gazetteer.yaml  project.yaml  sources.yaml
notebooks/: consumer_interest_analysis.ipynb  customer_review_analysis.ipynb  news_media_nlp_analysis.ipynb
scripts/: build_kba_annual_totals.py  build_media_attention_report.py  build_ner_seed.py  build_source_registry.py  collect_data.py  download_ch_registrations.py  download_gdelt_news.py  download_google_trends.py  download_kba_files.py  evaluate_ner_model.py  fetch_article_texts.py  generate_all_figures.py  generate_ch_figures.py  generate_news_wordclouds.py  generate_trends_figures.py  prepare_data.py  run_analysis.py  scrape_reviews.py  train_ner_model.py  train_review_models.py
src/car_interest_nlp/: __init__.py  config.py  logging_utils.py  paths.py  progress.py  schemas.py  scripts.py  utils.py
src/car_interest_nlp/analysis/: __init__.py  descriptive.py  media_attention.py  media_geography.py  top_brands.py
src/car_interest_nlp/data/: __init__.py  article_text.py  collectors.py  dataset_builder.py  errors.py  gdelt.py  gdelt_dataset_builder.py  google_trends.py  (+6 more)
(+29 files in other folders)
