[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "car-interest-nlp"
version = "0.1.0"
description = "Analysis of German vs. Chinese Car Brand Registration Market Share (KBA)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "AI Assistant" },
]
license = "MIT"
dependencies = [
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "matplotlib>=3.9.0",
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.0",
  "pyarrow>=17.0.0",
  "pydantic>=2.8.2",
  "pyyaml>=6.0.0",
  "jupyterlab>=4.2.3",
  "ruff>=0.6.2",
  "mypy>=1.10.0",
  "ipykernel>=6.29.0",
  "openpyxl>=3.1.2",
  "pytrends>=4.9.2",
  "spacy>=3.7.0",
  "wordcloud>=1.9.3",
  "scikit-learn>=1.5.0",
  "tqdm>=4.66.0",
  "trafilatura>=1.12.0",
  "click>=8.4.2",
  "plotly>=6.9.0",
  "kaleido>=1.3.0",
  "joblib>=1.4.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.2",
  "mypy>=1.10.0",
  "ipykernel>=6.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/car_interest_nlp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
files = ["src"]

[tool.uv]
package = true

[project.scripts]
car-interest-report = "car_interest_nlp.scripts:main"
